--- a/client/lab_5/styles.css
+++ b/client/lab_5/styles.css
@@ -21,6 +21,7 @@ body {
 .columns {
   display: flex;
   flex-wrap: wrap;
+  
 }
 
 .wrapper {
@@ -46,28 +47,26 @@ form {
 }
 
 .label  {
-  color: rgb(105, 105, 105);
+  color: rgb(80, 79, 79);
 }
 
-.submit {
-  padding-top: 30px;
+
 
   
-}
-
 .radio  {
-  color: rgb(137, 194, 32);
+  color: rgb(29, 180, 41);
 }
 
 button  {
-  background-color: rgb(126, 240, 215);
+  background-color: blue;
   border: none;
+  color: rgb(159, 159, 236);
   padding: 15px 35px;
   text-align: center;
   text-decoration: none;
   display:inline-block;
   font-size: 15px;
-  border-radius: 0px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
