--- a/client/lab_5/styles.css
+++ b/client/lab_5/styles.css
@@ -51,14 +51,13 @@ form  {
 }
 
 
-
   
 .radio  {
   color: rgb(29, 180, 41);
 }
 
 button  {
-  background-color: blue;
+  background-color: rgb(48, 48, 241);
   border: none;
   color: rgb(159, 159, 236);
   padding: 15px 35px;
@@ -66,7 +65,7 @@ button  {
   text-decoration: none;
   display:inline-block;
   font-size: 15px;
-  border-radius: 10px;
+  border-radius:50px;
   cursor: pointer;
 }
 
@@ -78,7 +77,7 @@ button  {
 
 .col  {
   color:black;
-  margin-left: 40%;
+  margin-left: 38%;
   height: 50px;
   padding: 10px;
   background-color:rgb(126, 240, 215);
@@ -86,7 +85,7 @@ button  {
   border-radius: 10px;
   margin-bottom: 10%;
   margin-right: 15%;
-  margin-top: -15%;
+  margin-top: -18%;
   
   
 
