--- a/client/lab_6/styles.css
+++ b/client/lab_6/styles.css
@@ -1,95 +1,79 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  min-height:100%;
+  background-color: rgb(1, 32, 97);
+}
+
+body {
+  margin: 0;
+  padding: 30px;
+  font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
+    ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
+  background-color: rgb(1, 32, 97);
   
-  html {
-    height:100%;
-  }
+}
+
+/* Page Layout */
+.columns {
+  display: flex;
+  flex-wrap: wrap;
   
-  body {
-    margin: 0;
-    padding: 30px;
-    font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
-      ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
-    background-color: rgb(1, 32, 97);
-    height: 100%;
-  }
+}
+
+.wrapper {
+  display: flex;
+}
+
+.container {
+  max-width: 960px;
+  margin-top: 25px;
+  margin: auto;
   
-  /* Page Layout */
-  .columns {
-    display: flex;
-    flex-wrap: wrap;
-    
-  }
+}
+.title {
+  background-color: rgb(164, 224, 224);
+  width: 100%;
+  border-radius: 4px;
+  padding: 15px;
+  margin-top: 25px;
+}
+
+
+#form  {
+  margin-left: 50px;
+  min-width: 250px;
+  background-color:lavender;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+
   
-  .wrapper {
-    display: flex;
-  }
-  
-  .title {
-    background-color: rgb(164, 224, 224);
-    color: rgb(0, 0, 0);
-    border-radius: 40px;
-    padding: 10px;
-  
-  }
-  
-  
-  form  {
-    margin-left: 100px;
-    margin-bottom: 25px;
-    width: 25%;
-    background-color:lavender;
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .label  {
-    color: rgb(80, 79, 79);
-  }
-  
-  .submit {
-    padding-top: 10px;
-  }
-    
-  .radio  {
-    color: rgb(29, 180, 41);
-  }
-  
-  button  {
-    background-color: rgb(48, 48, 241);
-    border: none;
-    color: rgb(159, 159, 236);
-    padding: 15px 35px;
-    text-align: center;
-    text-decoration: none;
-    display:inline-block;
-    font-size: 15px;
-    border-radius:50px;
-    cursor: pointer;
-  }
-  
-  .container {
-    max-width: 960px;
-    margin-top: 25px;
-    
-  }
-  
-  .col  {
-    color:black;
-    margin-left: 38%;
-    height: 50px;
-    padding: 10px;
-    background-color:rgb(126, 240, 215);
-    align-items:center;
-    border-radius: 10px;
-    margin-bottom: 10%;
-    margin-right: 15%;
-    margin-top: -18%;
-    
-    
-  
-  }
+.radio  {
+  display: block;
+  margin-bottom: 5px;
+  color: rgb(29, 180, 41);
+}
+
+.button  {
+  background-color: rgb(48, 48, 241);
+  border: none;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+
+.columns {
+  align-items: center;
+  justify-content: center;
+}
+#third_box {
+  margin-left: 50px;
+  background-color:lavender;
+}
   
