--- a/client/lab_6/styles.css
+++ b/client/lab_6/styles.css
@@ -43,6 +43,16 @@ body {
   margin-top: 25px;
 }
 
+.page_item {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  border-radius: 4px;
+  background-color: lavender;
+  height: fit-content;
+  margin: 20px;
+}
+
 
 #form  {
   margin-left: 50px;
